--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,13 @@
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css" />
 
-    <title>LICON - TCE-AC</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <title>BANCO DE PREÇOS OBRAS</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
@@ -13,9 +19,7 @@
       content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, viewport-fit=cover"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="LICON - TCE-AC" />
-
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="description" content="BANCO DE PREÇOS OBRAS" />
 
     <link id="theme-css" rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/theme/indigo/theme-light.css" />
     <link id="layout-css" rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/layout/css/layout-light.css" />
