--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,11 +21,21 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="BANCO DE PREÇOS OBRAS" />
 
-    <link id="theme-css" rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/theme/indigo/theme-light.css" />
-    <link id="layout-css" rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/layout/css/layout-light.css" />
+    <link
+      id="theme-css"
+      rel="stylesheet"
+      type="text/css"
+      href="%PUBLIC_URL%/sicro-sinapi/assets/theme/indigo/theme-light.css"
+    />
+    <link
+      id="layout-css"
+      rel="stylesheet"
+      type="text/css"
+      href="%PUBLIC_URL%/sicro-sinapi/assets/layout/css/layout-light.css"
+    />
 
-    <link rel="stylesheet" type="text/css" href="assets/pages/primeflex.min.css" />
-    <script src="%PUBLIC_URL%/env-config.js?version=<?=time()?>"></script>
+    <link rel="stylesheet" type="text/css" href="sicro-sinapi/assets/pages/primeflex.min.css" />
+    <script src="%PUBLIC_URL%/sicro-sinapi/env-config.js?version=<?=time()?>"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
