--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" />
-    <link rel="stylesheet" href="sicro-sinapi/assets/pages/primeflex.css" />
+    <link rel="stylesheet" href="assets/pages/primeflex.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,21 +21,11 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="BANCO DE PREÇOS OBRAS" />
 
-    <link
-      id="theme-css"
-      rel="stylesheet"
-      type="text/css"
-      href="%PUBLIC_URL%/sicro-sinapi/assets/theme/indigo/theme-light.css"
-    />
-    <link
-      id="layout-css"
-      rel="stylesheet"
-      type="text/css"
-      href="%PUBLIC_URL%/sicro-sinapi/assets/layout/css/layout-light.css"
-    />
+    <link id="theme-css" rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/theme/indigo/theme-light.css" />
+    <link id="layout-css" rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/layout/css/layout-light.css" />
 
-    <link rel="stylesheet" type="text/css" href="sicro-sinapi/assets/pages/primeflex.min.css" />
-    <script src="%PUBLIC_URL%/sicro-sinapi/env-config.js?version=<?=time()?>"></script>
+    <link rel="stylesheet" type="text/css" href="assets/pages/primeflex.min.css" />
+    <script src="%PUBLIC_URL%/env-config.js?version=<?=time()?>"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
